[gd_scene load_steps=98 format=2]

[ext_resource path="res://assets/menu/Black/paranim_Black_18.png" type="Texture" id=1]
[ext_resource path="res://assets/menu/Black/paranim_Black_20.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/Black/paranim_Black_11.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/Black/paranim_Black_16.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/Black/paranim_Black_22.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/Black/paranim_Black_9.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/Black/paranim_Black_15.png" type="Texture" id=7]
[ext_resource path="res://assets/menu/Black/paranim_Black_14.png" type="Texture" id=8]
[ext_resource path="res://assets/menu/Black/paranim_Black_10.png" type="Texture" id=9]
[ext_resource path="res://assets/menu/Black/paranim_Black_21.png" type="Texture" id=10]
[ext_resource path="res://assets/menu/Black/paranim_Black_19.png" type="Texture" id=11]
[ext_resource path="res://assets/menu/Black/paranim_Black_12.png" type="Texture" id=12]
[ext_resource path="res://assets/menu/Black/paranim_Black_13.png" type="Texture" id=13]
[ext_resource path="res://assets/menu/Black/paranim_Black_8.png" type="Texture" id=14]
[ext_resource path="res://assets/menu/Black/paranim_Black_17.png" type="Texture" id=15]
[ext_resource path="res://assets/menu/Black/paranim_Black_3.png" type="Texture" id=16]
[ext_resource path="res://assets/menu/Black/paranim_Black_6.png" type="Texture" id=17]
[ext_resource path="res://assets/menu/Black/paranim_Black_7.png" type="Texture" id=18]
[ext_resource path="res://assets/menu/Black/paranim_Black_4.png" type="Texture" id=19]
[ext_resource path="res://assets/menu/Black/paranim_Black_5.png" type="Texture" id=20]
[ext_resource path="res://assets/menu/Black/paranim_Black_2.png" type="Texture" id=21]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_9.png" type="Texture" id=22]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_12.png" type="Texture" id=23]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_7.png" type="Texture" id=24]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_10.png" type="Texture" id=25]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_8.png" type="Texture" id=26]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_13.png" type="Texture" id=27]
[ext_resource path="res://assets/menu/Black/paranim_Black_1.png" type="Texture" id=28]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_11.png" type="Texture" id=29]
[ext_resource path="res://assets/menu/Green/paranim_Green_14.png" type="Texture" id=30]
[ext_resource path="res://assets/menu/Red/paranim_Red_17.png" type="Texture" id=31]
[ext_resource path="res://assets/menu/Red/paranim_Red_19.png" type="Texture" id=32]
[ext_resource path="res://assets/menu/Red/paranim_Red_14.png" type="Texture" id=33]
[ext_resource path="res://assets/menu/Red/paranim_Red_1.png" type="Texture" id=34]
[ext_resource path="res://assets/menu/Green/paranim_Green_12.png" type="Texture" id=35]
[ext_resource path="res://assets/menu/Red/paranim_Red_3.png" type="Texture" id=36]
[ext_resource path="res://assets/menu/Red/paranim_Red_8.png" type="Texture" id=37]
[ext_resource path="res://assets/menu/Red/paranim_Red_12.png" type="Texture" id=38]
[ext_resource path="res://assets/menu/Green/paranim_Green_10.png" type="Texture" id=39]
[ext_resource path="res://assets/menu/Red/paranim_Red_15.png" type="Texture" id=40]
[ext_resource path="res://assets/menu/Red/paranim_Red_16.png" type="Texture" id=41]
[ext_resource path="res://assets/menu/Red/paranim_Red_4.png" type="Texture" id=42]
[ext_resource path="res://assets/menu/Red/paranim_Red_6.png" type="Texture" id=43]
[ext_resource path="res://assets/menu/Green/paranim_Green_9.png" type="Texture" id=44]
[ext_resource path="res://assets/menu/Red/paranim_Red_10.png" type="Texture" id=45]
[ext_resource path="res://assets/menu/Red/paranim_Red_13.png" type="Texture" id=46]
[ext_resource path="res://assets/menu/Red/paranim_Red_20.png" type="Texture" id=47]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_1.png" type="Texture" id=48]
[ext_resource path="res://assets/menu/Red/paranim_Red_9.png" type="Texture" id=49]
[ext_resource path="res://assets/menu/Red/paranim_Red_18.png" type="Texture" id=50]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_2.png" type="Texture" id=51]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_3.png" type="Texture" id=52]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_4.png" type="Texture" id=53]
[ext_resource path="res://assets/menu/Red/paranim_Red_7.png" type="Texture" id=54]
[ext_resource path="res://assets/menu/Red/paranim_Red_11.png" type="Texture" id=55]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_5.png" type="Texture" id=56]
[ext_resource path="res://assets/menu/Red/paranim_Red_2.png" type="Texture" id=57]
[ext_resource path="res://assets/menu/Yellow/paranim_Yellow_6.png" type="Texture" id=58]
[ext_resource path="res://assets/menu/Green/paranim_Green_13.png" type="Texture" id=59]
[ext_resource path="res://assets/menu/Red/paranim_Red_5.png" type="Texture" id=60]
[ext_resource path="res://assets/menu/Green/paranim_Green_11.png" type="Texture" id=61]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_9.png" type="Texture" id=62]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_4.png" type="Texture" id=63]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_13.png" type="Texture" id=64]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_8.png" type="Texture" id=65]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_1.png" type="Texture" id=66]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_12.png" type="Texture" id=67]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_14.png" type="Texture" id=68]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_5.png" type="Texture" id=69]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_6.png" type="Texture" id=70]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_15.png" type="Texture" id=71]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_10.png" type="Texture" id=72]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_2.png" type="Texture" id=73]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_16.png" type="Texture" id=74]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_3.png" type="Texture" id=75]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_11.png" type="Texture" id=76]
[ext_resource path="res://assets/menu/Blue/paranim_Blue_7.png" type="Texture" id=77]
[ext_resource path="res://assets/menu/Green/paranim_Green_1.png" type="Texture" id=78]
[ext_resource path="res://assets/menu/Green/paranim_Green_2.png" type="Texture" id=79]
[ext_resource path="res://assets/menu/Green/paranim_Green_7.png" type="Texture" id=80]
[ext_resource path="res://assets/menu/Green/paranim_Green_3.png" type="Texture" id=81]
[ext_resource path="res://assets/menu/Green/paranim_Green_6.png" type="Texture" id=82]
[ext_resource path="res://assets/menu/Green/paranim_Green_8.png" type="Texture" id=83]
[ext_resource path="res://assets/menu/Green/paranim_Green_4.png" type="Texture" id=84]
[ext_resource path="res://assets/menu/Green/paranim_Green_5.png" type="Texture" id=85]
[ext_resource path="res://assets/Kenney Future.ttf" type="DynamicFontData" id=86]
[ext_resource path="res://MainMenu.gd" type="Script" id=87]
[ext_resource path="res://assets/SFX/Let the Paranormal haunt!.ogg" type="AudioStream" id=88]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 86 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 86 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 86 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 86 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 86 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 86 )

[sub_resource type="DynamicFont" id=7]
size = 14
font_data = ExtResource( 86 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 66 ), ExtResource( 73 ), ExtResource( 75 ), ExtResource( 63 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 77 ), ExtResource( 65 ), ExtResource( 62 ), ExtResource( 72 ), ExtResource( 76 ), ExtResource( 67 ), ExtResource( 64 ), ExtResource( 68 ), ExtResource( 71 ), ExtResource( 74 ), ExtResource( 71 ), ExtResource( 68 ), ExtResource( 64 ), ExtResource( 67 ), ExtResource( 76 ), ExtResource( 72 ), ExtResource( 62 ), ExtResource( 65 ), ExtResource( 77 ), ExtResource( 70 ), ExtResource( 69 ), ExtResource( 63 ), ExtResource( 75 ), ExtResource( 73 ), ExtResource( 66 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 81 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 82 ), ExtResource( 80 ), ExtResource( 83 ), ExtResource( 44 ), ExtResource( 39 ), ExtResource( 61 ), ExtResource( 35 ), ExtResource( 59 ), ExtResource( 30 ), ExtResource( 59 ), ExtResource( 35 ), ExtResource( 61 ), ExtResource( 39 ), ExtResource( 44 ), ExtResource( 83 ), ExtResource( 80 ), ExtResource( 82 ), ExtResource( 85 ), ExtResource( 84 ), ExtResource( 81 ), ExtResource( 79 ), ExtResource( 78 ), ExtResource( 34 ), ExtResource( 57 ), ExtResource( 36 ), ExtResource( 42 ), ExtResource( 60 ), ExtResource( 43 ), ExtResource( 54 ), ExtResource( 37 ), ExtResource( 49 ), ExtResource( 45 ), ExtResource( 55 ), ExtResource( 38 ), ExtResource( 46 ), ExtResource( 33 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 31 ), ExtResource( 50 ), ExtResource( 32 ), ExtResource( 47 ), ExtResource( 32 ), ExtResource( 50 ), ExtResource( 31 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 33 ), ExtResource( 46 ), ExtResource( 38 ), ExtResource( 55 ), ExtResource( 45 ), ExtResource( 49 ), ExtResource( 37 ), ExtResource( 54 ), ExtResource( 43 ), ExtResource( 60 ), ExtResource( 42 ), ExtResource( 36 ), ExtResource( 57 ), ExtResource( 34 ), ExtResource( 48 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 56 ), ExtResource( 58 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 58 ), ExtResource( 56 ), ExtResource( 53 ), ExtResource( 52 ), ExtResource( 51 ), ExtResource( 48 ), ExtResource( 28 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 1 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 10 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=9]
size = 6
use_mipmaps = true
font_data = ExtResource( 86 )

[node name="Margin" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 87 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 600.0
color = Color( 0.156863, 0.156863, 0.156863, 1 )

[node name="Divide" type="HBoxContainer" parent="."]
margin_right = 960.0
margin_bottom = 600.0

[node name="Separate" type="VBoxContainer" parent="Divide"]
margin_right = 429.0
margin_bottom = 600.0
custom_constants/separation = 65

[node name="Title" type="Label" parent="Divide/Separate"]
margin_right = 429.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Paranormal Games"

[node name="Game" type="Button" parent="Divide/Separate"]
margin_top = 101.0
margin_right = 429.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 2 )
text = "START!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2play" type="HBoxContainer" parent="Divide/Separate"]
margin_top = 199.0
margin_right = 429.0
margin_bottom = 217.0

[node name="Text" type="Label" parent="Divide/Separate/2play"]
margin_top = 2.0
margin_right = 394.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
text = "This game was meant to be played by 2 players."

[node name="Okay" type="Button" parent="Divide/Separate/2play"]
margin_left = 398.0
margin_right = 426.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 4 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="Divide/Separate"]
margin_top = 282.0
margin_right = 429.0
margin_bottom = 315.0
custom_fonts/font = SubResource( 5 )
text = "CREDITS"

[node name="Exit" type="Button" parent="Divide/Separate"]
margin_top = 380.0
margin_right = 429.0
margin_bottom = 413.0
custom_fonts/font = SubResource( 6 )
text = "EXIT"

[node name="Version+Copy" type="Label" parent="Divide/Separate"]
margin_top = 478.0
margin_right = 429.0
margin_bottom = 515.0
custom_fonts/font = SubResource( 7 )
text = "Made by: Foxy-the-edagunCZ
Ver. 1.0"
valign = 1

[node name="Right" type="CenterContainer" parent="Divide"]
margin_left = 433.0
margin_right = 960.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Graves" type="AnimatedSprite" parent="Divide/Right"]
position = Vector2( 250, 248.947 )
frames = SubResource( 8 )
frame = 62
playing = true

[node name="PopCredits" type="Popup" parent="."]
margin_right = 960.0
margin_bottom = 600.0

[node name="Contain" type="MarginContainer" parent="PopCredits"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="PopCredits/Contain"]
margin_right = 960.0
margin_bottom = 604.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text-Button" type="VBoxContainer" parent="PopCredits/Contain"]
margin_right = 960.0
margin_bottom = 604.0

[node name="Licenses" type="Label" parent="PopCredits/Contain/Text-Button"]
margin_right = 960.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 9 )
text = "This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2020 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2020 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
------------------------------
Portions of this software are copyright © <year> The FreeType Project (www.freetype.org). All rights reserved.
------------------------------
Copyright (c) 2002-2016 Lee Salzman

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
------------------------------
MBedTLS is Copyright (C) 2013-2019 ARM

Licensed under the Apache License, Version 2.0 (the “License”); you may not use this file except in compliance with the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
------------------------------
Font package (free)

Created/distributed by Kenney (www.kenney.nl)

License: (Creative Commons Zero, CC0)
This content is free to use in personal, educational and commercial projects.

http://creativecommons.org/publicdomain/zero/1.0/
------------------------------
Voiceover Pack: Fighter

by  Kenney Vleugels (Kenney.nl)

License (Creative Commons Zero, CC0)
http://creativecommons.org/publicdomain/zero/1.0/

You may use these assets in personal and commercial projects.
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="PopCredits/Contain/Text-Button"]
margin_top = 584.0
margin_right = 960.0
margin_bottom = 604.0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 88 )
autoplay = true
[connection signal="pressed" from="Divide/Separate/Game" to="." method="_on_Game_pressed"]
[connection signal="pressed" from="Divide/Separate/2play/Okay" to="." method="_on_Okay_pressed"]
[connection signal="pressed" from="Divide/Separate/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Divide/Separate/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="PopCredits/Contain/Text-Button/OK" to="." method="_on_OK_pressed"]
